--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
 
     <input type="hidden" name="Total Orders" id="totalOrdersField">
     <input type="hidden" name="Total Cost" id="totalCostField">
-    <input type="hidden" name="_next" value="thank_you.html">
+    <input type="hidden" name="_next" value="https://hzbmunch.github.io/HZBMUNCHKINS/thank_you.html">
+
 
     <input type="submit" value="Submit Order">
   </form>
