--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
   <h1>Munchkin</h1>
   <h2>Order Form</h2>
 
-  <form action="https://formsubmit.co/boghartrapido@gmail.com" method="POST" onsubmit="return prepareOrder()" id="orderForm">
+  <!-- Remove the action attribute and handle submission via JavaScript -->
+  <form onsubmit="return handleSubmit(event)" id="orderForm">
     <div class="section-title">Customer Details</div>
     <label>Full Name:<input type="text" name="Customer Name" required></label><br><br>
     <label>Address:<textarea name="Address" rows="3" required></textarea></label><br><br>
@@ -137,8 +138,6 @@
 
     <input type="hidden" name="Total Orders" id="totalOrdersField">
     <input type="hidden" name="Total Cost" id="totalCostField">
-    <!-- Use relative URL for simplicity, assuming thank_you.html is in the same directory -->
-    <input type="hidden" name="_next" value="thank_you.html">
 
     <input type="submit" value="Submit Order">
   </form>
@@ -175,19 +174,38 @@
       document.getElementById("totalCostField").value = `₱${totalCost.toFixed(2)}`;
     }
 
-    function prepareOrder() {
-      try {
-        calculateTotal();
-        return true;
-      } catch (error) {
-        console.error("Error preparing order:", error);
-        alert("An error occurred while preparing your order. Please try again.");
-        return false;
-      }
-    }
-
     function toggleGcash(show) {
       document.getElementById("gcashDetails").style.display = show ? "block" : "none";
+    }
+
+    function handleSubmit(event) {
+      event.preventDefault(); // Prevent default form submission
+      calculateTotal(); // Update total fields before submission
+
+      const form = document.getElementById("orderForm");
+      const formData = new FormData(form);
+
+      // Send form data to Formsubmit.co
+      fetch("https://formsubmit.co/boghartrapido@gmail.com", {
+        method: "POST",
+        body: formData
+      })
+        .then(response => {
+          if (response.ok) {
+            console.log("Form submission successful, redirecting...");
+            // Redirect to thank_you.html after successful submission
+            window.location.href = "https://hzbmunch.github.io/HZBMUNCHKINS/thank_you.html";
+          } else {
+            console.error("Form submission failed with status:", response.status);
+            alert("Form submission failed. Please try again.");
+          }
+        })
+        .catch(error => {
+          console.error("Submission error:", error);
+          alert("An error occurred while submitting the form. Please try again.");
+        });
+
+      return false; // Prevent default form submission
     }
   </script>
 </body>
