--- a/index.html
+++ b/index.html
@@ -55,10 +55,13 @@
       font-weight: bold;
       margin-top: 10px;
     }
-    .thank-you {
+    .submission-message {
       text-align: center;
       margin-top: 20px;
-      font-family: cursive;
+      font-size: 1.2em;
+      color: #922f82;
+      font-weight: bold;
+      display: none;
     }
     .payment-method {
       margin-top: 15px;
@@ -83,14 +86,6 @@
       color: #007bff;
       text-decoration: none;
       font-weight: bold;
-    }
-    .submission-message {
-      text-align: center;
-      margin-top: 20px;
-      font-size: 1.2em;
-      color: #922f82;
-      font-weight: bold;
-      display: none; /* Hidden by default */
     }
     @media (max-width: 600px) {
       table, input, button {
@@ -126,7 +121,7 @@
       <tr><td>Matcha</td><td><input type="number" name="Premium Matcha" id="premiumMatcha" value="0" min="0"></td></tr>
     </table>
 
-    < heartbreakdiv class="payment-method">
+    <div class="payment-method">
       <strong>Payment Method:</strong><br>
       <label><input type="radio" name="Payment Method" value="Cash on Delivery" checked onchange="toggleGcash(false)"> Cash on Delivery</label><br>
       <label><input type="radio" name="Payment Method" value="G-Cash" onchange="toggleGcash(true)"> G-Cash</label>
@@ -149,14 +144,11 @@
     <input type="submit" value="Submit Order">
   </form>
 
-  <!-- Add a div to display the submission message -->
-  <div class="submission-message" id="submissionMessage">Order Submitted</div>
-
-  <div class="thank-you">Thank you! Order Again.</div>
+  <div class="submission-message" id="submissionMessage">✅ Order Submitted Successfully!</div>
 
   <div class="support-link">
-    Need help or want to send proof of payment? 
-    <br><a href="https://www.facebook.com/hannazhamira" target="_blank">Message us on Facebook</a>
+    Need help or want to send proof of payment?<br>
+    <a href="https://www.facebook.com/hannazhamira" target="_blank">Message us on Facebook</a>
   </div>
 
   <script>
@@ -189,37 +181,33 @@
     }
 
     function handleSubmit(event) {
-      event.preventDefault(); // Prevent default form submission
-      calculateTotal(); // Update total fields before submission
+      event.preventDefault();
+      calculateTotal();
 
       const form = document.getElementById("orderForm");
       const formData = new FormData(form);
       const submissionMessage = document.getElementById("submissionMessage");
 
-      // Send form data to Formsubmit.co
       fetch("https://formsubmit.co/boghartrapido@gmail.com", {
         method: "POST",
         body: formData
       })
-        .then(response => {
-          if (response.ok) {
-            console.log("Form submission successful");
-            // Show the "Order Submitted" message
-            submissionMessage.style.display = "block";
-            // Optionally, reset the form
-            form.reset();
-            document.getElementById("results").innerHTML = ""; // Clear the total results
-          } else {
-            console.error("Form submission failed with status:", response.status);
-            alert("Form submission failed. Please try again.");
-          }
-        })
-        .catch(error => {
-          console.error("Submission error:", error);
-          alert("An error occurred while submitting the form. Please try again.");
-        });
-
-      return false; // Prevent default form submission
+      .then(response => {
+        if (response.ok) {
+          submissionMessage.style.display = "block";
+          form.reset();
+          document.getElementById("results").innerHTML = "";
+          setTimeout(() => {
+            submissionMessage.style.display = "none";
+          }, 5000); // Hide after 5 seconds
+        } else {
+          alert("Submission failed. Please try again.");
+        }
+      })
+      .catch(error => {
+        alert("An error occurred. Please try again.");
+        console.error(error);
+      });
     }
   </script>
 </body>
