--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Munchkin Order Form</title>
+  <title>HZB MUNCHKINS</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -90,13 +90,13 @@
       font-size: 1.2em;
       color: #922f82;
       font-weight: bold;
-      background-color: #f0e4f8; /* Light purple background */
+      background-color: #f0e4f8;
       padding: 15px;
       border-radius: 8px;
       border: 2px solid #922f82;
-      display: none; /* Hidden by default */
+      display: none;
       opacity: 0;
-      transition: opacity 0.5s ease-in-out; /* Fade-in effect */
+      transition: opacity 0.5s ease-in-out;
     }
     .submission-message.visible {
       display: block;
@@ -159,7 +159,6 @@
     <input type="submit" value="Submit Order">
   </form>
 
-  <!-- Updated submission message text -->
   <div class="submission-message" id="submissionMessage">Order Submitted Successfully</div>
 
   <div class="thank-you">Thank you! Order Again.</div>
@@ -199,43 +198,37 @@
     }
 
     function handleSubmit(event) {
-      event.preventDefault(); // Prevent default form submission
-      calculateTotal(); // Update total fields before submission
+      event.preventDefault();
+      calculateTotal();
 
       const form = document.getElementById("orderForm");
       const formData = new FormData(form);
       const submissionMessage = document.getElementById("submissionMessage");
 
-      // Hide the message initially to allow re-showing with fade-in
+      // Hide the message before showing
       submissionMessage.classList.remove("visible");
 
-      <form action="https://formsubmit.co/boghartrapido@gmail.com" method="POST",
+      // Send to Google Sheets tracker
+      fetch("https://script.google.com/macros/s/AKfycbzxAT9UWuNN4zoPr6XEudstti1G8uQRnSf2FmQHNHqtFT4IcZzoCZWDkFK6MUWWTGMFrw/exec", {
+        method: "POST",
         body: formData
       })
-        .then(response => {
-          if (response.ok) {
-            console.log("Form submission successful");
-            // Show the "Order Submitted Successfully" message
-            submissionMessage.classList.add("visible");
-            // Reset the form
-            form.reset();
-            document.getElementById("results").innerHTML = ""; // Clear the total results
+      .then(response => {
+        if (response.ok) {
+          submissionMessage.classList.add("visible");
+          form.reset();
+          document.getElementById("results").innerHTML = "";
+          setTimeout(() => submissionMessage.classList.remove("visible"), 5000);
+        } else {
+          alert("Something went wrong. Please try again.");
+        }
+      })
+      .catch(error => {
+        console.error("Error:", error);
+        alert("There was a problem with submission. Please try again.");
+      });
 
-            // Optionally hide the message after 5 seconds
-            setTimeout(() => {
-              submissionMessage.classList.remove("visible");
-            }, 5000);
-          } else {
-            console.error("Form submission failed with status:", response.status);
-            alert("Form submission failed. Please try again.");
-          }
-        })
-        .catch(error => {
-          console.error("Submission error:", error);
-          alert("An error occurred while submitting the form. Please try again.");
-        });
-
-      return false; // Prevent default form submission
+      return false;
     }
   </script>
 </body>
