--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
     submissionMessage.classList.remove("visible");
 
-    fetch("YOUR_SCRIPT_URL_HERE", {
+    fetch("https://script.google.com/macros/s/AKfycbwMulbEr2m7rvRKzQa3hsJWcVIYmyFF9OBYngABCAjQtcsIJWYCiUs2hscs3pGKV-nc/exec", {
       method: "POST",
       body: formData
     })
